Implementata logica di provenienza Evento, per ora Accr e Piano For.

--- a/src/main/resources/templates/evento/eventoFragment.html
+++ b/src/main/resources/templates/evento/eventoFragment.html
@@ -26,6 +26,7 @@
 						<input type="hidden" th:field="${eventoWrapper.accreditamentoId}" />
 						<input type="hidden" th:field="${eventoWrapper.idEditabili}" />
 						<input type="hidden" th:field="${eventoWrapper.evento.pianoFormativo}" />
+						<input type="hidden" name="eventoFrom" th:value="${eventoWrapper.eventoFrom}" />
 					</th:block>
 
 					<!-- CLASSIFICAZIONE EVENTO (inserito o meno nel piano formativo) -->
