--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -11,7 +11,9 @@
 				<div class="x_title">
 					<h2 class="text-uppercase" th:text="#{label.utenti}"></h2>
 					<a class="btn btn-primary pull-right" th:href="@{/user/new}"
-						th:text="#{label.nuovo}">label.nuovo</a>
+						th:text="#{label.nuovo_utente}">label.nuovo_utente</a>
+					<a class="btn btn-primary pull-right" th:href="@{/profile/list}"
+						th:text="#{label.gestione_profili}">label.gestione_profili</a>
 					<div class="clearfix"></div>
 				</div>
 				<div class="x_content">
