--- a/src/main/resources/templates/user/profileList.html
+++ b/src/main/resources/templates/user/profileList.html
@@ -10,8 +10,8 @@
 			<div class="x_panel">
 				<div class="x_title">
 					<h2 class="text-uppercase" th:text="#{label.profili}"></h2>
-					<a class="btn btn-primary pull-right" th:href="@{/profile/new}"
-						th:text="#{label.nuovo}">label.nuovo</a>
+					<a class="btn btn-primary pull-right" th:href="@{/user/list}"
+						th:text="#{label.indietro}">label.indietro</a>
 					<div class="clearfix"></div>
 				</div>
 				<div class="x_content">
