--- a/src/main/resources/templates/provider/providerForm.html
+++ b/src/main/resources/templates/provider/providerForm.html
@@ -327,6 +327,7 @@
 		    	  labelFinish:[[#{label.conferma}]],
 		    	  includeFinishButton:false,
 		    	  hideButtonsOnDisabled: true,
+		    	  keyNavigation: false,
 		    	  onLeaveStep:leaveAStepCallback,
 		    	  selected: [[ ${stepToShow} ]],
 		    	  enableAllSteps: true
