--- a/src/main/resources/templates/pianoFormativo/pianoFormativoList.html
+++ b/src/main/resources/templates/pianoFormativo/pianoFormativoList.html
@@ -25,9 +25,12 @@
 							<div class="col-xs-12">
 
 								<div th:if="${#lists.isEmpty(pianoFormativoList)}">
-									<h2 class="col-xs-12 text-center">
+									<h2 class=" text-center">
 										<span class="glyphicon glyphicon-warning-sign" aria-hidden="true"> </span> <i th:text="#{label.nessun_piano_formativo}">Non ci sono piani formativi!</i>
 									</h2>
+
+									<h2 class="alert alert-info with-margin-top text-center" th:text="#{label.messaggio_warning_no_piani_formativi}"></h2>
+
 								</div>
 
 								<div th:unless="${#lists.isEmpty(pianoFormativoList)}" class="accordion-container" th:each="pianoFormativo, row : ${pianoFormativoList}" th:with="pianoFormativoInner=${pianoFormativo}">
