--- a/src/main/resources/templates/provider/providerEdit.html
+++ b/src/main/resources/templates/provider/providerEdit.html
@@ -27,7 +27,7 @@
 			<script th:inline="javascript">
 			/*<![CDATA[*/
 
-				 $('#hasPartitaIVA').on('ifChecked', function(){
+				$('#hasPartitaIVA').on('ifChecked', function(){
 			    	$('#partitaIva').prop('disabled', false)
 			    		.prop('required', true)
 			   	});
@@ -36,9 +36,10 @@
 			   		$('#partitaIva').prop('disabled', true)
 			   			.prop('required', false)
 			   			.val('')
-			   			.parent().next().remove();
-			   		$('#partitaIva').parent().parent().removeClass('bad');
-			   		$('#partitaIva').blur();
+			   			.blur()
+			   			.parent().closest('.bad').removeClass('bad').find('div.alert').fadeOut(150, function() {
+							$(this).remove();
+						});
 			   	});
 
 			/*]]>*/
