aggiunto messaggio di info per il cambio della password

--- a/src/main/resources/templates/user/changePassword.html
+++ b/src/main/resources/templates/user/changePassword.html
@@ -13,6 +13,10 @@
 					</div>
 					<div class="x_content">
 						<form class="form-horizontal form-label-left" th:object="${accountChangePassword}" th:action="@{/user/changePassword}" method="post" novalidate="novalidate">
+
+							<!-- info -->
+							<h2 class="col-xs-12 alert alert-info with-margin-top text-center" th:text="#{label.istruzioni_psw}"></h2>
+
 							<!-- old password -->
 							<div class="item form-group" th:classappend="${#fields.hasErrors('oldPassword')} ? 'bad'">
 								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="nomeUtente">
@@ -52,7 +56,6 @@
 								<div th:if="${#fields.hasErrors('confirmNewPassword')}" class="alert" th:errors="*{confirmNewPassword}"></div>
 							</div>
 
-
 		                    <!-- Invia dati -->
 							<div class="item form-group text-right">
 								<a class="btn btn-default right" th:href="@{/home}" th:text="#{label.annulla}"></a>
@@ -62,7 +65,6 @@
 					</div>
 				</div>
 			</div>
-
 		</div>
 	</body>
 </html>
