Corretto bug (div legale e delegato dove fare call ajax era lo stesso)

--- a/src/main/resources/templates/accreditamento/accreditamentoShowAll.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShowAll.html
@@ -80,7 +80,7 @@
 						<div class="clearfix"></div>
 					</div>
 
-					<div th:if="${accreditamentoWrapper.delegatoLegaleRappresentante != null}" id="legaleBlock" class="collapsible"></div>
+					<div th:if="${accreditamentoWrapper.delegatoLegaleRappresentante != null}" id="delegatoBlock" class="collapsible"></div>
 
 				</div>
 
