--- a/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
@@ -148,7 +148,7 @@
 							<th:block th:with="counter=${counter}" th:if="${editabile}">
 								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="accreditamento_professioni">
 									<div class="col-xs-12 select-with-margin-container">
-										<select id="professioni" class="selectpicker"
+										<select id="professioni" class="selectpicker required"
 											multiple="multiple" data-width="100%"
 											data-style="btn-primary" data-actions-box="true"
 											data-size="10" title="Seleziona una professione..."
@@ -160,7 +160,7 @@
 												th:field="${datiAccreditamentoWrapper.datiAccreditamento.professioniSelezionate}">Professione selezionata</option>
 										</select>
 									</div>
-									<select id="discipline" class="selectpicker" th:field="${datiAccreditamentoWrapper.datiAccreditamento.discipline}"
+									<select id="discipline" class="selectpicker required" th:field="${datiAccreditamentoWrapper.datiAccreditamento.discipline}"
 										multiple="multiple" data-width="100%"
 										data-style="btn-success" data-actions-box="true"
 										data-size="10" data-hide-disabled="true" th:attr="data-editabile=${#lists.contains(datiAccreditamentoWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('datiAccreditamento.discipline'))}"
