--- a/src/main/resources/templates/evento/eventoFragment.html
+++ b/src/main/resources/templates/evento/eventoFragment.html
@@ -80,7 +80,7 @@
 						</label>
 						<th:block th:if="${editabile}">
 							<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="procedure_formative_titolo">
-								<textarea maxlength="3000" id="title" rows="3" name="titolo"
+								<textarea class="required" maxlength="3000" id="title" rows="3" name="titolo"
 									style="resize: none;" th:field="${eventoWrapper.evento.titolo}"
 									th:disabled="${!#lists.contains(eventoWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('evento.titolo'))}">
 								</textarea>
@@ -109,7 +109,7 @@
 							<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="obiettivo_formativo_nazionale">
 								<!-- input disabilitato se l'evento è NON editabile perchè eventoShow o se l'id NON  è editabile -->
 								<select id="obiettivo-formativo-nazionale-select"
-									class="selectpicker"
+									class="selectpicker required"
 									th:field="${eventoWrapper.evento.obiettivoNazionale}"
 									data-width="100%" data-style="btn-primary"
 									data-actions-box="true" data-size="10"
@@ -153,7 +153,7 @@
 							<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="obiettivo_formativo_regionale">
 								<!-- input disabilitato se l'evento è NON editabile perchè eventoShow o se l'id NON  è editabile -->
 								<select id="obiettivo-formativo-regionale-select"
-									class="selectpicker"
+									class="selectpicker required"
 									th:field="${eventoWrapper.evento.obiettivoRegionale}"
 									data-width="100%" data-style="btn-primary"
 									data-actions-box="true" data-size="10"
@@ -228,7 +228,7 @@
 						<th:block th:if="${editabile}">
 							<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="evento_professioni-select">
 								<div class="col-xs-12 select-with-margin-container">
-									<select id="professioni" class="selectpicker multi"
+									<select id="professioni" class="selectpicker required multi"
 										multiple="multiple" data-width="100%"
 										data-style="btn-primary" data-actions-box="true"
 										data-size="10" title="Seleziona una professione..."
@@ -241,7 +241,7 @@
 											selezionata</option>
 									</select>
 								</div>
-								<select id="discipline" class="selectpicker multi"
+								<select id="discipline" class="selectpicker required multi"
 									th:field="${eventoWrapper.evento.discipline}"
 									multiple="multiple" data-width="100%"
 									data-style="btn-success" data-actions-box="true"
