--- a/src/main/resources/templates/persona/personaFragment.html
+++ b/src/main/resources/templates/persona/personaFragment.html
@@ -244,7 +244,7 @@
 							</label>
 							<th:block th:if="${editabile}">
 								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-		                        	<select id="professione_persona" class="selectpicker"
+		                        	<select id="professione_persona" class="selectpicker required"
 										data-width="100%" data-style="btn-primary" data-actions-box="true"
 										data-size="10" title="Seleziona una professione..."
 										th:remove="all-but-first"
