--- a/src/main/resources/templates/accreditamento/accreditamentoEdit.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoEdit.html
@@ -63,6 +63,10 @@
 					<div class="x_title">
 						<h2 th:text="${#messages.msg('label.provider_accreditamento') + ' ' + accreditamentoWrapper.provider.denominazioneLegale + ' (' + accreditamentoWrapper.provider.codiceFiscale + ') ' + #messages.msg('label.tipo_provider') + ' ' + accreditamentoWrapper.provider.tipoOrganizzatore.gruppo}"></h2>
 						<div class="pull-right buttons-header">
+							<a th:if="${accreditamentoWrapper.canSend}"
+									class="btn btn-success pull-right"
+									th:text="#{label.invia_domanda}"
+									th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/send|}"></a>
 							<button type="button" class="btn btn-primary pull-right" th:text="#{label.torna_in_visualizzazione}" onclick="switchMode()"></button>
 						</div>
 						<div class="clearfix"></div>
